--- a/register/package.json
+++ b/register/package.json
@@ -2,17 +2,16 @@
   "name": "register",
   "version": "0.0.0",
   "private": true,
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -21,7 +20,7 @@
     "http-errors": "~1.6.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^4.0.0",
+    "mongodb": "^5.9.0",
     "mongoose": "^8.13.2",
     "morgan": "~1.9.1",
     "nodemailer": "^6.10.0",
@@ -29,14 +28,12 @@
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.16.0",
     "qrcode": "^1.5.4",
-    "react-icons": "^5.5.0",
     "speakeasy": "^2.0.0",
     "twig": "~0.10.3",
     "twilio": "^5.4.5"
   },
-  "main": "app.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "description": "Système d'enregistrement sécurisé avec validation, mail, 2FA, PDF, etc.",
+  "author": "TonNom",
+  "license": "ISC"
 }
+
