--- a/register/package.json
+++ b/register/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
-  },
+  "start": "node ./bin/www",
+  "test": "echo \"No tests defined\" && exit 0"
+},
+
   "dependencies": {
     "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
