--- a/register/package.json
+++ b/register/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
   "start": "node ./bin/www",
-  "test": "echo \"No tests defined\" && exit 0"
+  "test": "echo \"No tests defined\" && exit 0",
+  "build": "echo \"No build step defined\""
 },
 
   "dependencies": {
